初始化chatgpt sdk