@@ -4,64 +4,28 @@ import com.unfbx.chatgpt.OpenAiClient;
 import com.unfbx.chatgpt.entity.chat.ChatCompletion;
 import com.unfbx.chatgpt.entity.chat.ChatCompletionResponse;
 import com.unfbx.chatgpt.entity.chat.Message;
-import com.unfbx.chatgpt.interceptor.DefaultOpenAiAuthInterceptor;
-import com.unfbx.chatgpt.interceptor.OpenAILogger;
-import com.unfbx.chatgpt.interceptor.OpenAiResponseInterceptor;
 import lombok.extern.slf4j.Slf4j;
-import okhttp3.OkHttpClient;
-import okhttp3.logging.HttpLoggingInterceptor;
 import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Value;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.test.context.ActiveProfiles;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.concurrent.TimeUnit;
+import java.util.List;
 
 @Slf4j
 @SpringBootTest
-@ActiveProfiles(value = "api2d")
 class YucongApplicationTests {
 
-    @Value("${api2d.api.base}")
-    private String base;
-    @Value("${api2d.api.key}")
-    private String key;
+    @Autowired
+    private OpenAiClient openAiClient;
 
     @Test
-    void openAi() {
-        HttpLoggingInterceptor httpLoggingInterceptor = new HttpLoggingInterceptor(new OpenAILogger());
-        //！！！！千万别再生产或者测试环境打开BODY级别日志！！！！
-        //！！！生产或者测试环境建议设置为这三种级别：NONE,BASIC,HEADERS,！！！
-        httpLoggingInterceptor.setLevel(HttpLoggingInterceptor.Level.HEADERS);
-        OkHttpClient okHttpClient = new OkHttpClient
-                .Builder()
-                .addInterceptor(httpLoggingInterceptor)
-                .addInterceptor(new OpenAiResponseInterceptor())
-                .connectTimeout(10, TimeUnit.SECONDS)
-                .writeTimeout(30, TimeUnit.SECONDS)
-                .readTimeout(30, TimeUnit.SECONDS)
-                .build();
-
-        OpenAiClient openAiClient = OpenAiClient.builder()
-                .apiKey(Collections.singletonList(this.key))
-                // 自定义key的获取策略：默认KeyRandomStrategy
-                // .keyStrategy(new KeyRandomStrategy())
-                .keyStrategy(new FirstKeyStrategy())
-                // 自己做了代理就传代理地址，没有可不不传
-                .apiHost(this.base)
-                .authInterceptor(new DefaultOpenAiAuthInterceptor())
-                .okHttpClient(okHttpClient)
-                .build();
-
+    void boost() {
         // 聊天模型：gpt-3.5
         Message message = Message.builder().role(Message.Role.USER).content("你好啊我的伙伴！").build();
-        ChatCompletion chatCompletion = ChatCompletion.builder().messages(Arrays.asList(message)).build();
-        ChatCompletionResponse chatCompletionResponse = openAiClient.chatCompletion(chatCompletion);
+        ChatCompletion chatCompletion = ChatCompletion.builder().messages(List.of(message)).build();
+        ChatCompletionResponse chatCompletionResponse = this.openAiClient.chatCompletion(chatCompletion);
         chatCompletionResponse.getChoices().forEach(e -> {
             log.info("{}", e.getMessage());
         });
-
     }
 }
